fixed padding not working on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -666,7 +666,10 @@ hr.postseperator {
     }
 
     .search-wrapper {
-        padding: 8px 3px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 2px;
+        padding-right: 2px;
     }
 
     .search-wrapper input {
